<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
	<modelVersion>4.0.0</modelVersion>
	<groupId>fi.otavanopisto.pyramus</groupId>
	<artifactId>parent</artifactId>
	<version>0.7.184-SNAPSHOT</version>
	<packaging>pom</packaging>
	<name>Pyramus Parent POM</name>
	<url>https://github.com/otavanopisto/pyramus/</url>
	<licenses>
		<license>
			<name>GNU LGPL v3</name>
			<url>http://www.gnu.org/licenses/lgpl.txt</url>
			<distribution>repo</distribution>
		</license>
	</licenses>

	<issueManagement>
		<system>GitHub</system>
		<url>https://github.com/otavanopisto/pyramus/issues</url>
	</issueManagement>

	<scm>
		<developerConnection>scm:git:git@github.com:otavanopisto/pyramus.git</developerConnection>
		<url>git@github.com:otavanopisto/pyramus.git</url>
		<connection>scm:git:git@github.com:otavanopisto/pyramus.git</connection>
		<tag>HEAD</tag>
	</scm>

	<organization>
		<name>Internetix / Otava Folk High School</name>
		<url>http://www.otavanopisto.fi</url>
	</organization>

	<properties>
		<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
		<maven.compiler.source>11</maven.compiler.source>
		<maven.compiler.target>11</maven.compiler.target>
	</properties>

	<modules>
		<module>bom</module>
		<module>common</module>
		<module>framework</module>
		<module>googleoauth-plugin</module>
		<module>testauth-plugin</module>
		<module>persistence</module>
		<module>plugin-core</module>
		<module>rest-model</module>
		<module>rest</module>
		<module>pyramus</module>
		<module>reports</module>
		<module>smvcj</module>
		<module>webhooks</module>
		<module>muikku-plugin</module>
	</modules>

	<dependencyManagement>
		<dependencies>
			<dependency>
				<groupId>fi.otavanopisto.pyramus</groupId>
				<artifactId>bom</artifactId>
				<version>${project.version}</version>
				<type>pom</type>
				<scope>import</scope>
			</dependency>
		</dependencies>
	</dependencyManagement>

	<build>
		<pluginManagement>
			<plugins>
				<plugin>
					<groupId>org.apache.maven.plugins</groupId>
					<artifactId>maven-release-plugin</artifactId>
					<version>2.5.1</version>
					<configuration>
						<mavenExecutorId>forked-path</mavenExecutorId>
						<useReleaseProfile>false</useReleaseProfile>
						<tagNameFormat>@{project.version}</tagNameFormat>
					</configuration>
				</plugin>
			</plugins>
		</pluginManagement>
	</build>

	<repositories>
		<repository>
			<id>otavanopisto-releases</id>
			<name>Otavan Opisto Releases</name>
			<url>https://nexus.muikkuverkko.fi/repository/otavanopisto-releases/</url>
		</repository>
		<repository>
			<id>otavanopisto-snapshots</id>
			<name>Otavan Opisto Snapshots</name>
			<url>https://nexus.muikkuverkko.fi/repository/otavanopisto-snapshots/</url>
			<snapshots>
				<enabled>true</enabled>
			</snapshots>
		</repository>
		<repository>
			<id>repository.jboss.org-public</id>
			<name>JBoss repository</name>
			<url>https://repository.jboss.org/nexus/content/groups/public</url>
		</repository>
	</repositories>

	<distributionManagement>
		<snapshotRepository>
			<uniqueVersion>false</uniqueVersion>
			<id>otavanopisto-snapshots</id>
			<name>Otavan Opisto Snapshots</name>
			<url>https://nexus.muikkuverkko.fi/repository/otavanopisto-snapshots/</url>
		</snapshotRepository>
		<repository>
			<uniqueVersion>true</uniqueVersion>
			<id>otavanopisto-releases</id>
			<name>Otavan Opisto Releases</name>
			<url>https://nexus.muikkuverkko.fi/repository/otavanopisto-releases/</url>
		</repository>
	</distributionManagement>

</project>
